base/envoy-filter.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: extract-subdomain
  namespace: istio-ingress
spec:
  workloadSelector:
    labels:
      gateway.networking.k8s.io/gateway-name: external-http-gateway
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.lua
          typed_config:
            "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua"
            defaultSourceCode:
              inlineString: |
                function envoy_on_request(request_handle)
                  local host = request_handle:headers():get(":authority")
                  local subdomain = string.match(host, "^([a-zA-Z0-9-]+)%.")
                  if subdomain then
                    request_handle:headers():add("baggage", "feature=" .. subdomain)
                  end
                end
